# hs-tigerbeetle

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  flake.nix  tigerbeetle.cabal
lib/: TigerBeetle.hs
lib/TigerBeetle/: Error.hs  Identifier.hs
lib/TigerBeetle/Internal/: Amount.hs  C.hs  Client.hsc  Context.hs  Packet.hs  Timestamp.hs
src/: Main.hs
test/: Main.hs
