cabal-version: 2.4
name:          tigerbeetle
version:       0.1.0.0
synopsis:      Haskell client for TigerBeetle
description:
  A Haskell client library for the TigerBeetle accounting database

category:      Database
license:       BSD-3-Clause
license-file:  LICENSE
author:        Shaun Sharples
maintainer:    shaun.sharples@gmail.com
build-type:    Simple

-- A copyright notice.
-- copyright:
-- extra-source-files: CHANGELOG.md
library
  hs-source-dirs:   lib
  default-language: GHC2021
  ghc-options:      -Wall -O
  build-depends:
    , base
    , bytestring
    , containers
    , inline-c
    , primitive
    , resourcet
    , streamly
    , template-haskell
    , text
    , time
    , transformers
    , uuid
    , vector
    , wide-word

  extra-libraries:  tb_client
  exposed-modules:
    TigerBeetle
    TigerBeetle.Error
    TigerBeetle.Identifier
    TigerBeetle.Internal.Amount
    TigerBeetle.Internal.C
    TigerBeetle.Internal.Client
    TigerBeetle.Internal.Context
    TigerBeetle.Internal.Packet
    TigerBeetle.Internal.Timestamp

test-suite tigerbeetle-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: GHC2021
  ghc-options:      -Wall -O -threaded
  build-depends:
    , base
    , bytestring
    , tasty
    , tasty-hunit
    , text
    , tigerbeetle
    , wide-word
